--- a/jswork/jswork/index.htm
+++ b/jswork/jswork/index.htm
@@ -11,7 +11,7 @@
     <a href="./work3/index.html">work3 简单网页聊天</a><br>
     <a href="./work4/index.html">work4 js基本语法</a><br>
     <a href="./work5/index.html">work5 js流程控制</a><br>
-    <a href="./work6/index.html">work6 阶乘法计算圆周率</a><br>
+    <a href="./work6/index.html">work6 js阶乘法计算圆周率</a>
     持续更新中。。。。。。
 </body>    
 </html>
