--- a/work10/index.html
+++ b/work10/index.html
@@ -11,6 +11,11 @@
         <p><input type="button" value="选大王" onclick="monkey()"></p>   
     <div id="monkeyking"></div>
     </div>
+    <p>统计字符串中字符出现的次数</p>
+    <p>待统计的字符串：<input id="str" type="text" value="qaeweezserasrweewa"></p>
+    <p><input type="button" value="统计" onclick="monkey()"></p>   
+<div id="monkeyking"></div></p>
 </body>
 <script src="index.js"></script>
 </html>
+
