--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <a href="./work14/index.html">work14 限时秒杀</a></br>
     <a href="./work14-1/index-1.html">work14-1 整点秒杀</a></br>
     <a href="./work14/index1.html">work14 红绿灯</a></br>
+    <a href="./work15/index.html">work15 购物车</a></br>
+    <a href="./work16/index.html">work16 放大镜</a></br>
+    <a href="./work16/index1.html">work16 小森乱跑</a></br>
     持续更新中。。。。。。
 
     
