--- a/work16/index1.html
+++ b/work16/index1.html
@@ -6,7 +6,7 @@
     <link href="./index1.css" rel="stylesheet">
 </head>
 <body>
-    <div id="box">臭流氓，还抓</div>
+    <div id="box">小森哥</div>
 </body>
 <script src="./index1.js"></script>
 </html>
