--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>王铭阳的《Javascript web前端开发》课程作业</title>
 </head>
-<body>
+<br>
     <p>王铭阳的《Javascript web前端开发》课程作业]</p>
     <a href='./work1/index.html'>work1 开发环境安装</a><br>
     <a href="./work2/index.html">work2 简单网页设计</a><br>
@@ -34,6 +34,8 @@
     <a href="./work20/index1.html">work20-1 选项移动</a><br>
     <a href="./work21/index.html">work21 无缝轮播图</a><br>
     <a href="./work21/index1.html">work21-1 jQuery Ajax无刷新提交评论</a><br>
+    <a href="./work22/index.html">work22 扫雷</a></br>    
+    <a href="./work23/index.html">work23 2048</a></br>
     持续更新中。。。。。。
 
     
