--- a/work23/index.html
+++ b/work23/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="game" class="game">
         <div class="game-score">
-            <input class="game-score" size=15 id="user" value="07190701蔡锦森">的分数:分数：<span id="game_score">0</span>
+            <input class="game-score" size=15 id="user" value="07190728王铭阳">的分数:分数：<span id="game_score">0</span>
         </div>
         <div id="game_container" class="game-container">
             <div id="game_over" class="game-over game-hide">
